# css-in-rust

./: .gitignore  Cargo.toml  README.md  compile_output.txt  theme_context.rs
.github/workflows/: ci.yml
.trae/rules/: project_rules.md
benches/: css_processing.rs
css-in-rust/: Cargo.toml  test_token_store.rs
css-in-rust-macros/: Cargo.toml
css-in-rust-macros/src/: cache_management.rs  css_macro.rs  css_processing.rs  dioxus_macros.rs  hash_utils.rs  lib.rs  macro_definitions.rs  theme_variants.rs  utility_conversion.rs  wasm_types.rs
css-in-rust-macros/tests/: css_macro_tests.rs
css-in-rust/docs/: dead-code-elimination.md
css-in-rust/examples/: basic.rs  complete_project_example.rs  dead_code_elimination.rs  minimal_demo.rs  simple_variant_demo.rs  variant_system_comprehensive.rs  variant_system_demo.rs  variant_system_fixed.rs  variant_system_simple.rs  variant_system_working.rs
css-in-rust/src/: lib.rs  macros.rs  theme_bridge.rs
css-in-rust/src/adapters/: dioxus.rs  mod.rs
css-in-rust/src/animation/: animation_engine.rs  animation_presets.rs  easing.rs  keyframes.rs  mod.rs
css-in-rust/src/build_tools/: build_script.rs  mod.rs  static_analyzer.rs
css-in-rust/src/core/: mod.rs  optimizer.rs  parser.rs
css-in-rust/src/css_engine/: mod.rs  optimizer.rs  parser.rs
css-in-rust/src/dev_experience/: code_completion.rs  diagnostics.rs  error_reporting.rs  ide_integration.rs  mod.rs  syntax_highlighting.rs
css-in-rust/src/hot_reload/: change_detector.rs  file_watcher.rs  mod.rs  reload_manager.rs  websocket_server.rs
css-in-rust/src/performance/: cache.rs  incremental.rs  metrics.rs  mod.rs  profiler.rs
css-in-rust/src/runtime/: injector.rs  manager.rs  mod.rs  provider.rs
css-in-rust/src/theme/: README.md  REFACTORING.md  ant_design_presets.rs  color_system.rs  css_generator.rs  css_variables.rs  design_token_system.rs  mod.rs  semantic_system.rs  tests.rs  theme_context.rs  theme_manager.rs  theme_provider.rs  theme_types.rs  token_definitions.rs  token_resolver.rs  token_system.rs  token_values.rs  typography_system.rs
css-in-rust/src/theme/adapter/: mod.rs
css-in-rust/src/theme/adapter/frameworks/: mod.rs
css-in-rust/src/theme/adapter/frameworks/dioxus/: mod.rs
css-in-rust/src/theme/adapter/frameworks/react/: mod.rs
css-in-rust/src/theme/adapter/injection/: mod.rs
css-in-rust/src/theme/adapter/provider/: mod.rs
css-in-rust/src/theme/adapter/ssr/: hydration.rs  mod.rs
css-in-rust/src/theme/core/: manager.rs  mod.rs  provider.rs
css-in-rust/src/theme/core/cache/: cache_entity.rs  cache_manager.rs  component_cache.rs  mod.rs
css-in-rust/src/theme/core/calc/: calculator.rs  mod.rs  num_calculator.rs  unit_converter.rs
css-in-rust/src/theme/core/css/: component_style.rs  dependency.rs  generator.rs  mod.rs  object.rs  pipeline.rs  processor.rs  variables.rs
css-in-rust/src/theme/core/manager/: mod.rs  theme_history.rs
css-in-rust/src/theme/core/optimize/: mod.rs
css-in-rust/src/theme/core/ssr/: extractor.rs  hydration.rs  mod.rs
css-in-rust/src/theme/core/token/: css_generator.rs  definitions.rs  mod.rs  resolver.rs  simple_system.rs  system.rs  values.rs
css-in-rust/src/theme/core/transform/: interface.rs  logical_properties.rs  mod.rs  px2rem.rs
css-in-rust/src/theme/dioxus/: examples.rs  hooks.rs  injector.rs  mod.rs  provider.rs  styled.rs
css-in-rust/src/theme/systems/: mod.rs  semantic_system.rs
css-in-rust/src/theme/systems/color/: mod.rs
css-in-rust/src/theme/systems/semantic/: mod.rs
css-in-rust/src/theme/systems/spacing/: mod.rs
css-in-rust/src/theme/systems/typography/: mod.rs
css-in-rust/src/variants/: conditional_styles.rs  minimal.rs  mod.rs  priority_manager.rs  responsive.rs  state_variants.rs  variant_resolver.rs  variant_types.rs
css-in-rust/tests/: integration_tests.rs
demo/: Cargo.toml  aaaa.md
demo-project/: Cargo.toml  README.md  build.rs  index.html
demo-project/src/: comprehensive_test.rs  hot_reload_demo.rs  main.rs  performance_demo.rs  theme_demo.rs  variant_demo.rs
demo/src/: main.rs  performance_demo.rs  theme_demo.rs  variant_demo.rs
docs/: 1-technique-customer+lightningcss.md  1-technique-plan-stylers+lightningcss.md  2-implementation-plan.md  README.md  api-reference.md  best-practices-2-2.md  build-optimization.md  core-responsibilate.md  css-in-rust-project-rules.md  developer-experience.md  hot-reload.md  implementation-plan.md  nest-step-token.md  next-step-refactor-theme.md  next-step.md  phase1-tasks.md  phase2-tasks.md  prompt.md  quick-start.md  refactor-task-v2.md  refactor-task.md
docs/backup/: design_tokens.rs
docs/backup/theme-v1/: ant_design_presets.rs  css_variables.rs  design_token_system.rs  design_tokens.rs  mod.rs  theme_provider.rs  token_value.rs
docs/backup/theme-v2/: design_token_system.rs  design_tokens.rs  theme_manager.rs  theme_provider.rs
docs/function-docs/: best-practices-1.md  best-practices-2-3.md  framework-integration.md
docs/qa/: demo.md  design_tokens.rs  is-perfact-copy-ant-design.md  lib.rs 13-43-04-902.rs
docs/research/: css-in-js-compare.md  final-plan-stylers+lightningcss.md  my-question.md  no-stylers.md  step.md  task-plan.md  todo-tasks.md
docs/todo-confirm-function-docs/: best-practices-2-1.md  configuration.md  performance.md
examples/: Cargo.toml  README.md  basic.rs  variant_system_demo.rs
examples/src/: README.md  basic.rs  dead_code_elimination.rs  lib.rs  main.rs  minimal_demo.rs  simple_variant_demo.rs  theme_demo.rs  token_system_usage.rs  variant_system_comprehensive.rs  variant_system_fixed.rs  variant_system_simple.rs  variant_system_working.rs
examples/src/components/: button.rs  mod.rs
src/: lib.rs  macros.rs
src/adapters/: dioxus.rs  mod.rs
src/core/: error.rs  mod.rs  optimizer.rs  parser.rs
src/runtime/: injector.rs  manager.rs  mod.rs  provider.rs  utils.rs
test_data/: large.css
tests/: integration_tests.rs
