[package]
name = "css-in-rust"
version = "0.1.0"
edition = "2021"
authors = ["AI Architect <ai@example.com>"]
description = "High-performance CSS-in-Rust solution based on stylers + lightningcss"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-username/css-in-rust"
keywords = ["css", "rust", "styling", "web", "dioxus"]
categories = ["web-programming", "development-tools"]
readme = "README.md"

[dependencies]
lightningcss = "1.0.0-alpha.66"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
thiserror = "1.0"
sha2 = "0.10"
once_cell = "1.19"
log = "0.4"
dioxus = { version = "0.6", optional = true }
dioxus-core = { version = "0.5", optional = true }

# Web platform dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlStyleElement",
  "Node",
  "Window",
] }
wasm-bindgen = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
trybuild = "1.0"

[features]
default = ["dioxus"]
dioxus = ["dep:dioxus", "dep:dioxus-core"]
ssr = []

[lib]
name = "css_in_rust"
proc-macro = true

[[bench]]
name = "css_processing"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
