[package]
name = "css-in-rust"
version = "0.1.0"
edition = "2021"
authors = ["AI Architect <ai@example.com>"]
description = "High-performance CSS-in-Rust solution based on stylers + lightningcss"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-username/css-in-rust"
keywords = ["css", "rust", "styling", "web", "dioxus"]
categories = ["web-programming", "development-tools"]
readme = "README.md"

[dependencies]
proc-macro2 = { version = "1.0", optional = true }
quote = { version = "1.0", optional = true }
syn = { version = "2.0", features = ["full", "extra-traits"], optional = true }
sha2 = { version = "0.10", optional = true }
criterion = "0.6.0"

# Web platform dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlStyleElement",
  "Node",
  "Window",
] }
wasm-bindgen = "0.2"

[dev-dependencies]

[features]
default = ["proc-macro"]
proc-macro = ["proc-macro2", "quote", "syn", "sha2"]
dioxus = []

[lib]
name = "css_in_rust"
proc-macro = true

[[example]]
name = "basic"
required-features = []

# Benchmark removed due to simplified version
# [[bench]]
# name = "css_processing"
# harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
