[package]
name = "css-in-rust"
version = "0.1.0"
edition = "2021"
authors = ["AI Architect <ai@example.com>"]
description = "High-performance CSS-in-Rust solution powered by lightningcss"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-username/css-in-rust"
keywords = ["css", "rust", "styling", "web", "dioxus"]
categories = ["web-programming", "development-tools"]
readme = "../README.md"

[dependencies]
css-in-rust-macros = { path = "../css-in-rust-macros", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
proc-macro2 = { version = "1.0", optional = true }
quote = { version = "1.0", optional = true }
syn = { version = "2.0", features = ["full", "extra-traits"], optional = true }
lightningcss = { version = "1.0.0-alpha.66", optional = true }
sha2 = { version = "0.10", optional = true }

# Web platform dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlStyleElement",
  "Node",
  "Window",
] }
wasm-bindgen = "0.2"

[dev-dependencies]

[features]
default = ["proc-macro", "optimizer"]
proc-macro = ["css-in-rust-macros", "proc-macro2", "quote", "syn"]
optimizer = ["lightningcss", "sha2"]
dioxus = []

[lib]
name = "css_in_rust"

[[example]]
name = "basic"
required-features = []

[[example]]
name = "variant_system_demo"
required-features = []

[[example]]
name = "simple_variant_demo"
required-features = []
