[package]
name = "css-in-rust"
version = "0.1.0"
edition = "2021"
authors = ["AI Architect <ai@example.com>"]
description = "High-performance CSS-in-Rust solution powered by lightningcss"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-username/css-in-rust"
keywords = ["css", "rust", "styling", "web", "dioxus"]
categories = ["web-programming", "development-tools"]
readme = "../README.md"

[dependencies]
css-in-rust-macros = { path = "../css-in-rust-macros", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.0"
proc-macro2 = { version = "1.0", optional = true }
quote = { version = "1.0", optional = true }
syn = { version = "2.0", features = ["full", "extra-traits"], optional = true }
lightningcss = { version = "1.0.0-alpha.66", optional = true }
sha2 = "0.10.6"
sha1 = "0.10.6"
base64 = "0.22.1"
num_cpus = "1.17.0"
web-sys = "0.3"
hex = "0.4.3"
dioxus = { version = "0.6.3", optional = true }

# Web platform dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlHeadElement",
  "HtmlStyleElement",
  "Node",
  "Window",
] }
wasm-bindgen = "0.2"

[dev-dependencies]

[features]
default = ["proc-macro", "ssr"]
proc-macro = ["css-in-rust-macros", "proc-macro2", "quote", "syn"]
optimizer = ["lightningcss"]
dioxus = ["dep:dioxus"]
ssr = []
build-time-tracking = []
build-tools = []
init = []

[lib]
name = "css_in_rust"

[[bin]]
name = "css-optimizer"
path = "src/bin/css-optimizer.rs"
required-features = ["optimizer"]
